# UMCP-Canon

./: .gitignore  .pre-commit-config.yaml  CANON.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  GLOSSARY.md  KERNEL.md  LICENSE  README.md  REPRODUCIBILITY.md  SCOPE.md  WELD.md  __init__.py  ci.yml  cli.py  closures.py  contract.py  eid.py  kernel.py  manifest.py  pipeline.py  pyproject.toml  regime.py  test_eid.py  test_kernel_and_weld.py  tier0.py  weld.py
