[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "umcp-canon-kernel"
version = "0.1.0"
description = "Contract-first UMCP Tier-0→Tier-1 kernel + weld (canon-grade reference implementation)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Clement Paulus"}]
keywords = ["UMCP", "GCD", "collapse", "coherence", "weld", "integrity", "audit"]
dependencies = []

[project.optional-dependencies]
cli = ["pandas>=2.2.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "pre-commit>=3.7.0"]

[project.scripts]
umcp = "umcp.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["umcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
